# Leeds-localelc-scraper

./: .gitignore  Leeds_LE2019_results.csv  Leeds_LE2021_scraper.ipynb  Makefile  README.md  environment.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: Leeds_LE2019_scraper-checkpoint.ipynb
data/: Leeds_LE2021_results.csv  Leeds_LE2022_results.csv  Leeds_LE2023_results.csv  Leeds_LE2024_results.csv
notebooks/: Leeds_LE2022_scraper.ipynb
src/election_scraper/: __init__.py  accordion.py  candidate_row.py  cli.py  extract_candidate_rows.py  fetch_page.py  ward_result.py
tests/: create_result_page.py  fakes.py  test_candidate_row.py  test_execute.py  test_extract_candidate_rows.py  test_ward_result.py
tests/templates/: result.html.j2
