[project]
name = "election_scraper"
description = "Leeds Local election scraper CLI"
version = "0.1.0"
requires-python = "~=3.12"

dependencies = [
    "BeautifulSoup4~=4.12.0",
    "requests~=2.31.0"
]

[project.scripts]
election_scraper = "election_scraper:main"

[project.optional-dependencies]
dev = [
    "black~=24.4.0",
    "isort~=5.13.0",
    "jinja2~=3.1.0",
    "mypy~=1.10.0",
    "pytest~=8.0.0",
    "ruff~=0.4.0",
    "types-beautifulsoup4~=4.12.0",
    "types-requests~=2.31.0.0",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 120

[tool.mypy]
strict = true
